--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+python = ">=3.9,<3.12"
 pydantic = "^2.7.1"
 openai = "^1.25.0"
 load-dotenv = "^0.1.0"
@@ -17,6 +17,11 @@ tiktoken = "^0.6.0"
 pyyaml = "^6.0.1"
 langchain = "^0.1.17"
 google-generativeai = "^0.5.2"
+tesseract = "^0.1.3"
+unstructured = {extras = ["all-docs"], version = "^0.13.6"}
+pypdf = "^4.2.0"
+pypdf2 = "^3.0.1"
+pdfplumber = "^0.11.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -103,15 +108,17 @@ ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'
 
 [tool.poe.tasks]
-lint = "ruff check multimodal-rag"
-fmt-ruff = "ruff format multimodal-rag"
+lint = "ruff check src"
+fmt-ruff = "ruff format src"
+fix-lint-ruff = "ruff check --fix src"
+ruff = ["fmt-ruff", "fix-lint-ruff"]
 test = "pytest"
 cover = "pytest --cov=multimodal-rag --cov-report xml"
-fmt-check = "black multimodal-rag --check"
-fmt-black = "black multimodal-rag"
+fmt-check = "black src --check"
+fmt-black = "black src"
 docs = "sphinx-build -b html docs docs/_build/html"
-security = "bandit -r multimodal-rag"
-typecheck = "mypy multimodal-rag"
-complexity = "radon cc multimodal-rag --average --show-complexity --xml > complexity_report.xml"
+security = "bandit -r src"
+typecheck = "mypy src"
+complexity = "radon cc src --average --show-complexity"
 build = ["fmt-black", "fmt-ruff", "test"]
-check = ["lint","fmt-check", "security", "typecheck", "complexity"]
+check = ["lint","fmt-check", "security", "complexity"]
